# LeetLLama

./: .env  .gitattributes  .gitignore  README.md  chunking.py  crawler_test.py  docker-compose.yaml  requirements.txt
Dockerfiles/: Dockerfile.api  Dockerfile.frontend  Dockerfile.ragservice
compose/: milvus-standalone-docker-compose-gpu.yml  neo4j-docker-compose.yml  rag-docker-compose.yml
docs/: README.md
notebooks/: 01-Data-Preprocessing.ipynb  01-LLM-Sanity-Check.ipynb  02-Preprocessing-the-Dataset.ipynb  03-Baseline-Evaluation.ipynb  04-Classic-RAG-Evalutaion.ipynb  05-Graph-RAG-Evaluation.ipynb  06-Conclusions.ipynb  LeetLLaMA-Experiments.ipynb
raglib/: README.md  project.toml  pyproject.toml
raglib/raglib/common/chunker/: base.py  vanilla_chunker.py
raglib/raglib/common/embedder/: base.py  bge_embedder.py
raglib/raglib/common/vstore_connector/: base.py  milvus_connector.py
raglib/raglib/doc_rag/: crawler.py
raglib/raglib/leet_rag/: df_processor.py
raglib/raglib/tests/common/chunker/: test_chunker.py
raglib/raglib/tests/common/embedder/: test_embedder.py
raglib/raglib/tests/common/vstore_connector/: test_vstore_connector.py
raglib/raglib/tests/doc_rag/: test_crawler.py
raglib/raglib/tests/integration/: test_integration_pydocs.py
raglib/raglib/tests/leet_rag/: test_df_processor.py
src/: config.yaml
src/api/: main.py
src/frontend/: .env  app.py
src/frontend/.chainlit/: config.toml
src/frontend/models/: endpoints.py
src/frontend/prompts/: teamplates.py
src/frontend/public/: custom-theme.css  (+1 more)
src/models/: models.py
(+5 files in other folders)
